Gave images an explicit height to prevent layout shift on slower connections

--- a/src/components/PlanSection/PlanSection.module.scss
+++ b/src/components/PlanSection/PlanSection.module.scss
@@ -55,6 +55,7 @@
 
   &__img {
     margin-bottom: 2.5rem;
+    height: 2.5rem;
 
     @media (max-width: $bp-2) {
       margin-bottom: unset;
