--- a/src/components/SubmittedSection/SubmittedSection.module.scss
+++ b/src/components/SubmittedSection/SubmittedSection.module.scss
@@ -9,6 +9,7 @@
   &__icon {
     margin-bottom: 2.5rem;
     margin-top: 10rem;
+    height: 5rem;
 
     @media (max-width: $bp-5) {
       margin-top: 2.5rem;
